--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <title>WEB_TEST</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <script src="js/index.js" defer></script>
+    <script type="module" src="js/index.js" defer></script>
 </head>
 <body>
     <header class="header">
         <div class="header__content container">
             <a href="index.html" class="header__logo logo"><img src="img/Logo.svg" alt="WEB_TEST" class="logo__img"></a>
-            <div class="header__head-btns head-btns authorized-btns"">
+            <div class="header__head-btns head-btns not-authorized-btns"">
                 <a href="login.html" class="head-btns__login-btn head-btn">Вход</a>
                 <a href="registration.html" class="head-btns__register-btn head-btn">Регистрация</a>
             </div>
-            <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-            <div class="header__head-btns head-btns not-authorized-btns" style="display: none;">
-            <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+            <div class="header__head-btns head-btns authorized-btns">
                 <p class="head-btn head-btns__logout-btn">Выход</p>
                 <a href="profile.html" class="head-btn head-btns__profile-btn">Профиль</a>
             </div>
