--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="registration.html" class="head-btns__register-btn head-btn">Регистрация</a>
             </div>
             <div class="header__head-btns head-btns authorized-btns">
-                <p class="head-btn head-btns__logout-btn">Выход</p>
+                <p class="head-btn head-btns__logout-btn logout-btn">Выход</p>
                 <a href="profile.html" class="head-btn head-btns__profile-btn">Профиль</a>
             </div>
         </div>
