--- a/marathon-test.html
+++ b/marathon-test.html
@@ -14,7 +14,7 @@
         <div class="header__content container">
             <a href="index.html" class="header__logo logo"><img src="img/Logo.svg" alt="WEB_TEST" class="logo__img"></a>
             <div class="header__head-btns head-btns not-authorized-btns">
-                <p class="head-btn head-btns__logout-btn">Выход</p>
+                <p class="head-btn head-btns__logout-btn logout-btn">Выход</p>
                 <a href="profile.html" class="head-btn head-btns__profile-btn">Профиль</a>
             </div>
         </div>
