add style for profile.html

--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
             <div class="main__profile-page profile-page">
                 <h1 class="profile-page__heading big-heading">Личный кабинет</h1>
                 <div class="profile-page__users-info users-info">
-                    <img src="img/profile/profile-picture.svg" alt="Your profile picture" class="users-info__profile-picture">
+                    <img src="img/profile/profile-picture.svg" alt="Your profile picture" class="users-info__profile-picture profile-picture">
                     <div class="users-info__users-info-text-block users-info-text-block">
                         <p class="users-info-text-block__info-name">
                             Логин
@@ -38,7 +38,7 @@
                             Ваш уровень
                         </p>
                         <p class="users-info-text-block__info just-text level-info">Пользователь</p>
-                        <button class="users-info-text-block__log-out-btn logout-btn">Выйти</button>
+                        <button class="btn users-info-text-block__log-out-btn logout-btn">Выйти</button>
                     </div>
                 </div>
                 <div class="profile-page__users-results users-results">
@@ -49,8 +49,9 @@
                         Ваш последний результат: <span class="result__number last-result">12%</span>
                     </p>
                     <p class="users-results__result">
-                        Время прохождения лучшего результата: <span class="result__number best">02:20</span>
+                        Время прохождения лучшего результата: <span class="result__number time-of-best">02:20</span>
                     </p>
+                    <button class="users-result__edit-tasks-btn edit-tasks-btn btn">Редактировать задания</button>
                 </div>
             </div>
         </div>
