--- a/fast-test.html
+++ b/fast-test.html
@@ -7,7 +7,7 @@
     <title>WEB_TEST</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <script src="js/index.js" defer></script>
+    <script type="module" src="js/index.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -21,20 +21,57 @@
     </header>
     <main class="main">
         <div class="main__content container">
-            <div class="main__link-to-main-block link-to-main-block">
+            <div class="main__link-to-main-block link-to-main-block test-page-link-to-main">
                 <a href="index.html" class="link-to-main-block__link-to-main just-text">← На главную</a>
+                <p class="link-to-main-block__stopwatch test-stopwatch">
+                    <span class="test-stopwatch__minutes test-stopwatch__digits">00</span>
+                    :
+                    <span class="test-stopwatch__seconds test-stopwatch__digits">00</span>
+                </p>
             </div>
-            <div class="main__test-start-scrn test-start-scrn">
-                <div class="test-start-scrn__test-text-info test-text-info">
-                    <h1 class="big-heading test-text-info__heading">Быстрый тест</h1>
-                    <h3 class="test-text-info__sub-heading sub-heading">Нажмите на кнопку, когда будете готовы!</h3>
+            <div class="main__test-page test-page">
+                <!-- <div class="test-page__link-to-main-block link-to-main-block">
+                    <a href="index.html" class="link-to-main-block__link-to-main just-text">← На главную</a>
+                    <p class="link-to-main-block__stopwatch test-stopwatch">
+                        <span class="test-stopwatch__minutes test-stopwatch__digits">00</span>
+                        :
+                        <span class="test-stopwatch__seconds test-stopwatch__digits">00</span>
+                    </p>
+                </div> -->
+
+                <!-- <div class="test-page__task-block task-block task-order_0" id="taskId_0">
+                    <p class="task-block__task-text blue-bold-text">Каким css свойством можно задать фоновый цвет?</p>
+                    <div class="task-block__task-options task-options">
+                        <label for="0" class="task-options__task-option just-text"><input type="radio" class="task-option__radio-input" name="taskId_1" value="background-color" id="0">background-color</label>
+                        <label for="1" class="task-options__task-option just-text"><input type="radio" class="task-option__radio-input" name="taskId_1" value="background-image" id="1">background-image</label>
+                        <label for="2" class="task-options__task-option just-text"><input type="radio" class="task-option__radio-input" name="taskId_1" value="color" id="2">color</label>
+                        <label for="3" class="task-options__task-option just-text"><input type="radio" class="task-option__radio-input" name="taskId_1" value="bg-color" id="3">bg-color</label>
+                    </div>
+                </div> -->
+
+                <div class="test-page__tasks-block">
+                    <!-- <div class="tasks-block__task-block task-block task-order_0" id="taskId_0">
+                        <p class="task-block__task-text blue-bold-text">Каким css свойством можно задать фоновый цвет?</p>
+                        <div class="task-block__task-options task-options">
+                            <label for="0" class="task-options__task-option just-text"><input type="checkbox" class="task-option__checkbox" name="taskId_1" value="background-color" id="0">background-color</label>
+                            <label for="1" class="task-options__task-option just-text"><input type="checkbox" class="task-option__checkbox" name="taskId_1" value="background-image" id="1">background-image</label>
+                            <label for="2" class="task-options__task-option just-text"><input type="checkbox" class="task-option__checkbox" name="taskId_1" value="color" id="2">color</label>
+                            <label for="3" class="task-options__task-option just-text"><input type="checkbox" class="task-option__checkbox" name="taskId_1" value="bg-color" id="3">bg-color</label>
+                        </div>
+                    </div> -->
                 </div>
-                <p class="test-start-scrn__test-desc just-text"><span class="important-text">Быстрый тест</span> состоит из 5 вопросов. При нажатии на кнопку запустится тест.</p>
-                <img src="img/test/test.svg" alt="Быстрый тест" class="test-start-scrn__img img">
-                <div class="test-start-scrn__test-btns-block test-btns-block">
-                    <button class="test-btns-block__start-test-btn fast-test-start-btn">Начать</button>
-                    <a href="best-results.html" class="test-btns-block__result-btn btn results-btn">Лучшие результаты</a>
+                <div class="test-page__next-back-btns next-back-btns">
+                    <button class="next-back-btns__btn next-back-btns__back-btn btn">← Назад</button>
+                    <button class="next-back-btns__btn next-back-btns__next-btn btn">Вперёд →</button>
                 </div>
+                <div class="test-page__tasks-pagination tasks-pagination">
+                    <!-- <button class="tasks-pagination__task-number btn">1</button>
+                    <button class="tasks-pagination__task-number btn">2</button>
+                    <button class="tasks-pagination__task-number btn">3</button>
+                    <button class="tasks-pagination__task-number btn">4</button>
+                    <button class="tasks-pagination__task-number btn">5</button> -->
+                </div>
+                <button class="test-page__finish-btn">Завершить</button>
             </div>
         </div>
     </main>
