--- a/start-fast-test.html
+++ b/start-fast-test.html
@@ -7,7 +7,7 @@
     <title>WEB_TEST</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <script src="js/index.js" defer></script>
+    <script type="module" src="js/index.js" defer></script>
 </head>
 <body>
     <header class="header">
