finished the fast test

--- a/fast-test.html
+++ b/fast-test.html
@@ -24,10 +24,11 @@
             <div class="main__link-to-main-block link-to-main-block test-page-link-to-main">
                 <a href="index.html" class="link-to-main-block__link-to-main just-text">← На главную</a>
                 <p class="link-to-main-block__stopwatch test-stopwatch">
-                    <span class="test-stopwatch__minutes test-stopwatch__digits">0</span>
-                    :
-                    <span class="test-stopwatch__seconds test-stopwatch__digits">00</span>
+                    <span class="test-stopwatch__minutes test-stopwatch__digits">0</span>:<span class="test-stopwatch__seconds test-stopwatch__digits">00</span>
                 </p>
+            </div>
+            <div class="main__link-to-main-block link-to-main-block link-block-without-stopwatch">
+                <a href="index.html" class="link-to-main-block__link-to-main just-text">← На главную</a>
             </div>
             <div class="main__test-page test-page">
 
@@ -52,17 +53,20 @@
                         </div>
                     </div> -->
                 </div>
-                <div class="test-page__next-back-btns next-back-btns">
+
+                <!-- Кнопки переключения страниц -->
+
+                <!-- <div class="test-page__next-back-btns next-back-btns">
                     <button class="next-back-btns__btn next-back-btns__back-btn btn">← Назад</button>
                     <button class="next-back-btns__btn next-back-btns__next-btn btn">Вперёд →</button>
                 </div>
                 <div class="test-page__tasks-pagination tasks-pagination">
-                    <!-- <button class="tasks-pagination__task-number btn">1</button>
+                    <button class="tasks-pagination__task-number btn">1</button>
                     <button class="tasks-pagination__task-number btn">2</button>
                     <button class="tasks-pagination__task-number btn">3</button>
                     <button class="tasks-pagination__task-number btn">4</button>
-                    <button class="tasks-pagination__task-number btn">5</button> -->
-                </div>
+                    <button class="tasks-pagination__task-number btn">5</button>
+                </div> -->
                 <button class="test-page__finish-btn">Завершить</button>
             </div>
         </div>
