made the testing system

--- a/start-marathon-test.html
+++ b/start-marathon-test.html
@@ -29,7 +29,7 @@
                     <h1 class="big-heading test-text-info__heading">Марафон</h1>
                     <h3 class="test-text-info__sub-heading sub-heading">Нажмите на кнопку, когда будете готовы!</h3>
                 </div>
-                <p class="test-start-scrn__test-desc just-text"><span class="important-text">Быстрый тест</span> состоит из 5 вопросов. При нажатии на кнопку запустится тест.</p>
+                <p class="test-start-scrn__test-desc just-text"><span class="important-text">Марафон</span> представляет собой большой тест, в котором представлены все задания, что есть в нашем тесте.</p>
                 <img src="img/test/test.svg" alt="Быстрый тест" class="test-start-scrn__img img">
                 <div class="test-start-scrn__test-btns-block test-btns-block">
                     <a href="marathon-test.html" class="test-btns-block__start-test-btn marathon-test-start-btn">Начать</a>
