--- a/marathon-test.html
+++ b/marathon-test.html
@@ -24,53 +24,27 @@
             <div class="main__link-to-main-block link-to-main-block test-page-link-to-main">
                 <a href="index.html" class="link-to-main-block__link-to-main just-text">← На главную</a>
                 <p class="link-to-main-block__stopwatch test-stopwatch">
-                    <span class="test-stopwatch__minutes test-stopwatch__digits">0</span>
-                    :
-                    <span class="test-stopwatch__seconds test-stopwatch__digits">00</span>
+                    <span class="test-stopwatch__minutes test-stopwatch__digits">0</span>:<span class="test-stopwatch__seconds test-stopwatch__digits">00</span>
                 </p>
             </div>
+            <div class="main__link-to-main-block link-to-main-block link-block-without-stopwatch">
+                <a href="index.html" class="link-to-main-block__link-to-main just-text">← На главную</a>
+            </div>
             <div class="main__test-page test-page">
-                <!-- <div class="test-page__link-to-main-block link-to-main-block">
-                    <a href="index.html" class="link-to-main-block__link-to-main just-text">← На главную</a>
-                    <p class="link-to-main-block__stopwatch test-stopwatch">
-                        <span class="test-stopwatch__minutes test-stopwatch__digits">00</span>
-                        :
-                        <span class="test-stopwatch__seconds test-stopwatch__digits">00</span>
-                    </p>
-                </div> -->
-
-                <!-- <div class="test-page__task-block task-block task-order_0" id="taskId_0">
-                    <p class="task-block__task-text blue-bold-text">Каким css свойством можно задать фоновый цвет?</p>
-                    <div class="task-block__task-options task-options">
-                        <label for="0" class="task-options__task-option just-text"><input type="radio" class="task-option__radio-input" name="taskId_1" value="background-color" id="0">background-color</label>
-                        <label for="1" class="task-options__task-option just-text"><input type="radio" class="task-option__radio-input" name="taskId_1" value="background-image" id="1">background-image</label>
-                        <label for="2" class="task-options__task-option just-text"><input type="radio" class="task-option__radio-input" name="taskId_1" value="color" id="2">color</label>
-                        <label for="3" class="task-options__task-option just-text"><input type="radio" class="task-option__radio-input" name="taskId_1" value="bg-color" id="3">bg-color</label>
-                    </div>
-                </div> -->
-
                 <div class="test-page__tasks-block">
-                    <!-- <div class="tasks-block__task-block task-block task-order_0" id="taskId_0">
-                        <p class="task-block__task-text blue-bold-text">Каким css свойством можно задать фоновый цвет?</p>
-                        <div class="task-block__task-options task-options">
-                            <label for="0" class="task-options__task-option just-text"><input type="checkbox" class="task-option__checkbox" name="taskId_1" value="background-color" id="0">background-color</label>
-                            <label for="1" class="task-options__task-option just-text"><input type="checkbox" class="task-option__checkbox" name="taskId_1" value="background-image" id="1">background-image</label>
-                            <label for="2" class="task-options__task-option just-text"><input type="checkbox" class="task-option__checkbox" name="taskId_1" value="color" id="2">color</label>
-                            <label for="3" class="task-options__task-option just-text"><input type="checkbox" class="task-option__checkbox" name="taskId_1" value="bg-color" id="3">bg-color</label>
-                        </div>
-                    </div> -->
+
                 </div>
-                <div class="test-page__next-back-btns next-back-btns">
+                <!-- <div class="test-page__next-back-btns next-back-btns">
                     <button class="next-back-btns__btn next-back-btns__back-btn btn">← Назад</button>
                     <button class="next-back-btns__btn next-back-btns__next-btn btn">Вперёд →</button>
                 </div>
                 <div class="test-page__tasks-pagination tasks-pagination">
-                    <!-- <button class="tasks-pagination__task-number btn">1</button>
+                    <button class="tasks-pagination__task-number btn">1</button>
                     <button class="tasks-pagination__task-number btn">2</button>
                     <button class="tasks-pagination__task-number btn">3</button>
                     <button class="tasks-pagination__task-number btn">4</button>
-                    <button class="tasks-pagination__task-number btn">5</button> -->
-                </div>
+                    <button class="tasks-pagination__task-number btn">5</button>
+                </div> -->
                 <button class="test-page__finish-btn">Завершить</button>
             </div>
         </div>
