made a best result table

--- a/best-results.html
+++ b/best-results.html
@@ -31,7 +31,7 @@
             <div class="main__best-results-page best-results-page">
                 <h2 class="best-results-page__heading big-heading">Олимп WEB_TEST</h2>
                 <div class="best-results-page__best-result-table best-result-table">
-                    <div class="best-result-table__table-head table-cell table-head">
+                    <!-- <div class="best-result-table__table-head table-cell table-head">
                         <p class="table-cell__text just-text">№</p>
                     </div>
                     <div class="best-result-table__table-head table-cell table-head">
@@ -42,11 +42,11 @@
                     </div>
                     <div class="best-result-table__table-head table-cell table-head">
                         <p class="table-cell__text just-text">Счёт</p>
-                    </div>
+                    </div> -->
 
 
 
-                    <div class="best-result-table__table-head table-cell">
+                    <!-- <div class="best-result-table__table-head table-cell">
                         <p class="table-cell__text just-text">1</p>
                     </div>
                     <div class="best-result-table__table-head table-cell">
@@ -57,7 +57,7 @@
                     </div>
                     <div class="best-result-table__table-head table-cell">
                         <p class="table-cell__text just-text">90%</p>
-                    </div>
+                    </div> -->
 
 
 
