end project mainly

--- a/best-results.html
+++ b/best-results.html
@@ -13,11 +13,7 @@
     <header class="header">
         <div class="header__content container">
             <a href="index.html" class="header__logo logo"><img src="img/Logo.svg" alt="WEB_TEST" class="logo__img"></a>
-            <div class="header__head-btns head-btns not-authorized-btns"">
-                <a href="login.html" class="head-btns__login-btn head-btn">Вход</a>
-                <a href="registration.html" class="head-btns__register-btn head-btn">Регистрация</a>
-            </div>
-            <div class="header__head-btns head-btns authorized-btns">
+            <div class="header__head-btns head-btns">
                 <p class="head-btn head-btns__logout-btn logout-btn">Выход</p>
                 <a href="profile.html" class="head-btn head-btns__profile-btn">Профиль</a>
             </div>
@@ -31,37 +27,7 @@
             <div class="main__best-results-page best-results-page">
                 <h2 class="best-results-page__heading big-heading">Олимп WEB_TEST</h2>
                 <div class="best-results-page__best-result-table best-result-table">
-                    <!-- <div class="best-result-table__table-head table-cell table-head">
-                        <p class="table-cell__text just-text">№</p>
-                    </div>
-                    <div class="best-result-table__table-head table-cell table-head">
-                        <p class="table-cell__text just-text">Ник</p>
-                    </div>
-                    <div class="best-result-table__table-head table-cell table-head">
-                        <p class="table-cell__text just-text">Время</p>
-                    </div>
-                    <div class="best-result-table__table-head table-cell table-head">
-                        <p class="table-cell__text just-text">Счёт</p>
-                    </div> -->
-
-
-
-                    <!-- <div class="best-result-table__table-head table-cell">
-                        <p class="table-cell__text just-text">1</p>
-                    </div>
-                    <div class="best-result-table__table-head table-cell">
-                        <p class="table-cell__text just-text">faaaaaaaaaaaaaaaaaaag</p>
-                    </div>
-                    <div class="best-result-table__table-head table-cell">
-                        <p class="table-cell__text just-text">10:20</p>
-                    </div>
-                    <div class="best-result-table__table-head table-cell">
-                        <p class="table-cell__text just-text">90%</p>
-                    </div> -->
-
-
-
-
+                    <!-- сгенерированная таблица -->
                 </div>
             </div>
         </div>
