--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="welcome-block__welcome-block-btns welcome-block-btns btns-block">
                     <button class="welcome-block-btns__fast-test-btn welcome-block-blue-btns btn fast-test-btn">Быстрый тест</button>
                     <button class="welcome-block-btns__marathon-btn welcome-block-blue-btns btn marathon-btn">Марафон</button>
-                    <a href="best-results.html" class="welcome-block-btns__result-btn btn results-btn">Лучшие результаты</a>
+                    <button class="welcome-block-btns__result-btn btn results-btn">Лучшие результаты</button>
                 </div>
             </div>
             <div class="test-desc">
