--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="header__content container">
             <a href="index.html" class="header__logo logo"><img src="img/Logo.svg" alt="WEB_TEST" class="logo__img"></a>
-            <div class="header__head-btns head-btns not-authorized-btns">
+            <div class="header__head-btns head-btns">
                 <p class="head-btn head-btns__logout-btn logout-btn">Выход</p>
                 <a href="profile.html" class="head-btn head-btns__profile-btn">Профиль</a>
             </div>
@@ -51,7 +51,7 @@
                     <p class="users-results__result blue-bold-text">
                         Время прохождения лучшего результата: <span class="result__number time-of-best">0:00</span>
                     </p>
-                    <button class="users-result__edit-tasks-btn edit-tasks-btn btn">Редактировать задания</button>
+                    <a href="task-redactor.html" class="users-result__edit-tasks-btn edit-tasks-btn btn">Редактировать задания</a>
                 </div>
             </div>
         </div>
