--- a/start-marathon-test.html
+++ b/start-marathon-test.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="header__content container">
             <a href="index.html" class="header__logo logo"><img src="img/Logo.svg" alt="WEB_TEST" class="logo__img"></a>
-            <div class="header__head-btns head-btns not-authorized-btns">
+            <div class="header__head-btns head-btns">
                 <p class="head-btn head-btns__logout-btn logout-btn">Выход</p>
                 <a href="profile.html" class="head-btn head-btns__profile-btn">Профиль</a>
             </div>
